<resources>
    <string name="app_name">grocerylist</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="groceryname">Grocery Name</string>
    <string name="qty">Qty</string>
    <string name="date">Date:</string>
    <string name="sure">Are You Sure ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
