<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:text="@string/groceryname"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <TextView
                    android:id="@+id/quantity"
                    android:layout_below="@id/name"
                    android:text="@string/qty"
                    android:paddingTop="5dp"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                
                <TextView
                    android:id="@+id/dateAdded"
                    android:paddingTop="5dp"
                    android:text="@string/date"
                    android:textStyle="italic"
                    android:layout_below="@id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TableRow
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/dateAdded">

                    <Button android:id="@+id/editButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginRight="15dp"
                        android:background="@android:drawable/ic_menu_edit" />

                    <Button android:id="@+id/deleteButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/ic_delete" />


                </TableRow>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>